--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,7 @@
 {{ partial "global/head" . }}
 {{ partial "home/hero" . }}
 {{ partial "home/intro" . }}
+{{ partial "home/panels" . }}
+{{ partial "home/featured" . }}
+{{ partial "home/closing" . }}
 {{ partial "global/footer" . }}
