--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -5,9 +5,13 @@
         <div class="navbar-brand">
           <a class="navbar-item" href="{{ .Site.BaseURL }}">
             {{ if .Site.Data.design.logo_and_title.logo }}
+            {{ if $.IsHome }}
               <img src="{{ .Site.Data.design.logo_and_title.logo | absURL }}" alt="">
+              {{ else }}
+              <img src="/uploads/ck-designsblack.png" alt="">
+              {{ end }}
             {{ else }}
-            <h1 class="title is-3">{{ .Site.Data.design.logo_and_title.site_title }}</h1>
+            <h1 class="title is-3" {{ if $.IsHome }}style="color:#fff;"{{ else }}style="color:#000"{{ end }}>{{ .Site.Data.design.logo_and_title.site_title }}</h1>
             {{ end }}
           </a>
           <span class="navbar-burger burger" data-target="navbarMenuHeroA">
@@ -22,7 +26,7 @@
         {{ range .Site.Menus.main }}
         {{ if .HasChildren }}
             <div class="navbar-item has-dropdown is-hoverable main-drop">
-                <a class="navbar-link" href="javascript:;">
+                <a class="navbar-link" href="javascript:;" {{ if $.IsHome }}style="color:#fff;"{{ else }}style="color:#000"{{ end }}>
                     {{ .Name }}
                 </a>
                 <!-- First Level Dropdown -->
@@ -38,7 +42,7 @@
                   <!-- End first level Dropdown -->
             </div>
             {{ else }} <!-- Else No Drop Down-->
-            <a href="{{ .URL |absURL }}" class="navbar-item">{{ .Name }}</a>
+            <a href="{{ .URL |absURL }}" class="navbar-item" {{ if $.IsHome }}style="color:#fff;"{{ else }}style="color:#000"{{ end }}>{{ .Name }}</a>
         {{ end }}
         {{ end }} <!-- End range menu -->
       </div>
