--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -7,11 +7,11 @@
 
 
   <!-- Hero content: will be in the middle -->
-  <div class="hero-body slide-content">
+  <div class="hero-body slide-content mt-6">
     <div class="container is-fluid has-text-centered">
       <div class="columns">
         <div class="column is-half has-text-white is-offset-one-quarter">
-          <h1 class="title is-1 has-text-white hero-title is-uppercase">{{ .heading }}</h1>
+          <h1 class="title is-1 has-text-white hero-title is-uppercase is-size-3-mobile">{{ .heading }}</h1>
           {{ if .link }}<a href="{{ .link }}" class="hero-button has-text-white">{{ .link_text }}</a>{{ end }}
         </div>
       </div>
