--- a/layouts/bathroom-remodels/bathroom-remodels.html
+++ b/layouts/bathroom-remodels/bathroom-remodels.html
@@ -6,7 +6,7 @@
                 <h1 class="title is-1">{{ .Title }}</h1>
             </div>
             <div class="column">
-                <p>View portfolios of kitchen remodels</p>
+                <p>View portfolios of bathroom remodels</p>
             </div>
         </div>
         <hr>
