--- a/layouts/partials/home/panels.html
+++ b/layouts/partials/home/panels.html
@@ -2,17 +2,17 @@
     <div class="columns has-text-centered is-gapless has-text-white">
         <div class="column">
             <div class="panel-inner-one">
-                <a href="/">Kitchens</a>
+                <a href="/kitchen-remodels">Kitchens</a>
             </div>
         </div>
         <div class="column">
             <div class="panel-inner-two">
-                <a href="/">Bathrooms</a>
+                <a href="/bathroom-remodels">Bathrooms</a>
             </div>
         </div>
         <div class="column">
             <div class="panel-inner-three">
-                <a href="/">Counters</a>
+                <a href="/cabinets-countertops-hardware/">Counters</a>
             </div>
         </div>
     </div>
