--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -61,5 +61,42 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-lightbox/0.2.12/slick-lightbox.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
 <script src="{{.Site.BaseURL}}/js/main.js"></script>
+<script>
+  // NAV DROP
+// NAV
+document.addEventListener('DOMContentLoaded', () => {
+
+  // Get all "navbar-burger" elements
+  const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+  // Check if there are any navbar burgers
+  if ($navbarBurgers.length > 0) {
+
+    // Add a click event on each of them
+    $navbarBurgers.forEach( el => {
+      el.addEventListener('click', () => {
+
+        // Get the target from the "data-target" attribute
+        const target = el.dataset.target;
+        const $target = document.getElementById(target);
+
+        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+        el.classList.toggle('is-active');
+        $target.classList.toggle('is-active');
+
+      });
+    });
+  }
+
+});
+
+
+
+// Check for click events on the navbar burger icon
+$(".main-drop").click(function() {
+  // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+  $(".navbar-dropdown", this).toggleClass("is-active");
+});
+</script>
 </body>
 </html>
