--- a/layouts/partials/home/intro.html
+++ b/layouts/partials/home/intro.html
@@ -7,7 +7,7 @@
                 <p>For complete expert top-to-bottom residential design in the Fayetteville, GA, and surrounding area, call on CK Designs Kitchen & Bath. We’re your locally owned and operated go-to for cabinetry, countertops, hardware, appliances, plumbing fixtures, lighting, tile backsplash, tile floor, tile showers, flooring, and more!</p>
                 <br>
                 <br>
-                <a href="" class="primary-btn">Contact</a>
+                <a href="/contact" class="primary-btn">Contact</a>
             </div>
         </div>
     </div>
