--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -53,7 +53,7 @@ body strong {
 }
 
 div.content a {
-    color: #C69C6D;
+    color: #;
 }
 
 div.content.single-content p {
@@ -78,7 +78,7 @@ body h4.subtitle,
 body h5.subtitle,
 body h6.subtitle {
     font-family: 'Raleway', sans-serif;
-    color: #C69C6D;
+    color: #5497df;
 }
 
 /* FORMS */
@@ -174,7 +174,7 @@ div.home-slide:after {
 }
 
 a.hero-button:hover {
-    color: #C69C6D;
+    color: #5497df;
     transition: width .3s ease;
 }
 
@@ -291,7 +291,7 @@ a.navbar-link:not(.is-arrowless)::after {
 
 div a.navbar-item:hover {
     background: none;
-    color: #C69C6D;
+    color: #5497df;
     transition: color .3s ease;
 }
 
@@ -332,7 +332,7 @@ a.navbar-link:hover {
         position: absolute;
         left: 0;
         right: 0;
-        top: 0;
+        top: -30px;
         background: black;
         background-size:cover;
         background-repeat: no-repeat;
