--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,7 +45,7 @@ body p {
     font-family: 'Mulish', "Times", Arial, sans-serif;
     line-height: 2;
     font-weight: 100;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 body strong {
@@ -53,7 +53,7 @@ body strong {
 }
 
 div.content a {
-    color: #;
+    color: #5497df;
 }
 
 div.content.single-content p {
@@ -282,7 +282,7 @@ a.navbar-link,
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     transition: color .3s ease;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 a.navbar-link:not(.is-arrowless)::after {
