--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -11,8 +11,8 @@
     <div class="container is-fluid has-text-centered">
       <div class="columns">
         <div class="column is-half has-text-white is-offset-one-quarter">
-          <h1 class="title is-1 has-text-white hero-title is-uppercase is-size-3-mobile">{{ .heading }}</h1>
-          {{ if .link }}<a href="{{ .link }}" class="hero-button has-text-white">{{ .link_text }}</a>{{ end }}
+          <h1 class="title is-2 has-text-white hero-title is-uppercase is-size-3-mobile">{{ .heading }}</h1>
+          {{ if .link }}<a href="/bathroom-remodels" class="hero-button has-text-white">{{ .link_text }}</a>{{ end }}
         </div>
       </div>
     </div>
