--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -343,6 +343,21 @@ a.navbar-link:hover {
         background-position: center;
     }
 
+    .navbar-menu.is-active a.navbar-link,
+    .navbar-menu.is-active a.navbar-item {
+        color: #fff!important;
+    }
+
+    .navbar-burger.burger {
+        background:#f2f2f2; 
+        transition: background .2s ease;
+    }
+
+    .navbar-burger.burger:hover {
+        background: #c8c8c8;
+        transition: background .2s ease;
+    }
+
     .navbar-burger {
         z-index: 10;
     }
