--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -349,7 +349,7 @@ a.navbar-link:hover {
     }
 
     .navbar-burger.burger {
-        background:#f2f2f2; 
+        background:rgb(39 39 39 / 40%); 
         transition: background .2s ease;
     }
 
