--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -98,5 +98,21 @@ $(".main-drop").click(function() {
   $(".navbar-dropdown", this).toggleClass("is-active");
 });
 </script>
+<script type='text/javascript' charset='utf-8'>
+  window.liveSiteAsyncInit = function() {
+    LiveSite.init({
+      id : 'WI-VO6LDLZQ4RT6F3DR6KZ1'
+    });
+  };
+  (function(d, s, id){
+    var js, fjs = d.getElementsByTagName(s)[0],
+        p = 'https://',
+        r = Math.floor(new Date().getTime() / 1000000);
+    if (d.getElementById(id)) {return;}
+    js = d.createElement(s); js.id = id;
+    js.src = p + "d2ra6nuwn69ktl.cloudfront.net/assets/livesite.js?" + r;
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'livesite-jssdk'));
+</script>
 </body>
 </html>
