--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -312,7 +312,7 @@ a.navbar-link:hover {
         color: black;
     }
     div.navbar-dropdown {
-        border-top: 2px solid #b83c30;
+        border-top: 2px solid #5497df;
     }
 }
 
