--- a/layouts/partials/global/seo.html
+++ b/layouts/partials/global/seo.html
@@ -9,25 +9,45 @@
     <meta property="og:title" content="{{ $seo.title_tag }}" />
     <meta property="og:description" content="{{ $seo.meta_description }}" />
     <meta property="og:type" content="website" />
-{{ else if eq .RelPermalink "/contact/" }}
+{{ else if eq .RelPermalink "/contact-information/" }}
     <meta property="og:image" content="{{ $logo | absURL }}" />
-    <meta property="og:title" content="{{ $pageConfigSeo.contact_page.title_tag }}" />
-    <meta property="og:description" content="{{ $pageConfigSeo.contact_page.meta_description }}" />
-    <meta property="og:type" content="website" />
-{{ else if eq .RelPermalink "/listings/" }}
-    <meta property="og:image" content="{{ $logo | absURL }}" />
-    <meta property="og:title" content="{{ $pageConfigSeo.listing_page.title_tag }}" />
-    <meta property="og:description" content="{{ $pageConfigSeo.listing_page.meta_description }}" />
-    <meta property="og:type" content="website" />
-{{ else if eq .RelPermalink "/team/" }}
-    <meta property="og:image" content="{{ $logo | absURL }}" />
-    <meta property="og:title" content="{{ $pageConfigSeo.team_page.title_tag }}" />
-    <meta property="og:description" content="{{ $pageConfigSeo.team_page.meta_description }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.contact_page.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.contact_page.search_engine_optimization.meta_description }}" />
     <meta property="og:type" content="website" />
 {{ else if eq .RelPermalink "/blog/" }}
     <meta property="og:image" content="{{ $logo | absURL }}" />
-    <meta property="og:title" content="{{ $pageConfigSeo.blog_page.title_tag }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.blog_page.search_engine_optimization.title_tag }}" />
     <meta property="og:description" content="{{ $pageConfigSeo.blog_page.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/bathroom-remodels/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.bathroom_remodels.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.bathroom_remodels.search_engine_optimization.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/cabinets-countertops-hardware/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.cabinets.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.cabinets.search_engine_optimization.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/plumbing-fixtures-appliances-lighting/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.fixtures.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.fixtures.search_engine_optimization.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/flooring/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.flooring.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.flooring.search_engine_optimization.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/kitchen-remodels/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.kitchen_remodel.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.kitchen_remodel.search_engine_optimization.meta_description }}" />
+    <meta property="og:type" content="website" />
+{{ else if eq .RelPermalink "/tile-backsplash-showers-flooring/" }}
+    <meta property="og:image" content="{{ $logo | absURL }}" />
+    <meta property="og:title" content="{{ $pageConfigSeo.tile_work.search_engine_optimization.title_tag }}" />
+    <meta property="og:description" content="{{ $pageConfigSeo.tile_work.search_engine_optimization.meta_description }}" />
     <meta property="og:type" content="website" />
 {{ else }}
     <meta property="og:image" content="{{ if .Params.photos.gallery }}{{ index .Params.photos.gallery 0 |absURL }}{{ else }}{{ .Params.featured_image | absURL }}{{ end }}">
@@ -41,19 +61,32 @@
 {{ if $.IsHome }}
     <title>{{ $seo.title_tag }}</title>
     <meta name="description" content="{{ $seo.meta_description }}">
-{{ else if eq .RelPermalink "/contact/" }}
-    <title>{{ $pageConfigSeo.contact_page.title_tag }}</title>
-    <meta name="description" content="{{ $pageConfigSeo.contact_page.meta_description }}">
-{{ else if eq .RelPermalink "/listings/" }}
-    <title>{{ $pageConfigSeo.listing_page.title_tag }}</title>
-    <meta name="description" content="{{ $pageConfigSeo.listing_page.meta_description }}">
-{{ else if eq .RelPermalink "/team/" }}
-    <title>{{ $pageConfigSeo.team_page.title_tag }}</title>
-    <meta name="description" content="{{ $pageConfigSeo.team_page.meta_description }}">
+{{ else if eq .RelPermalink "/contact-information/" }}
+    <title>{{ $pageConfigSeo.contact_page.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.contact_page.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/bathroom-remodels/" }}
+    <title>{{ $pageConfigSeo.bathroom_remodels.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.bathroom_remodels.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/cabinets-countertops-hardware/" }}
+    <title>{{ $pageConfigSeo.cabinets.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.cabinets.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/plumbing-fixtures-appliances-lighting/" }}
+    <title>{{ $pageConfigSeo.fixtures.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.fixtures.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/flooring/" }}
+    <title>{{ $pageConfigSeo.flooring.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.flooring.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/kitchen-remodels/" }}
+    <title>{{ $pageConfigSeo.kitchen_remodel.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.kitchen_remodel.search_engine_optimization.meta_description }}">
+{{ else if eq .RelPermalink "/tile-backsplash-showers-flooring/" }}
+    <title>{{ $pageConfigSeo.tile_work.search_engine_optimization.title_tag }}</title>
+    <meta name="description" content="{{ $pageConfigSeo.tile_work.search_engine_optimization.meta_description }}">
 {{ else if eq .RelPermalink "/blog/" }}
     <title>{{ $pageConfigSeo.blog_page.title_tag }}</title>
     <meta name="description" content="{{ $pageConfigSeo.blog_page.meta_description }}">
 {{ else }}
     <title>{{ $.Params.search_engine_optimization.title_tag }}</title>
     <meta name="description" content="{{ $.Params.search_engine_optimization.meta_description }}">
+    
 {{ end }}
