--- a/layouts/partials/home/featured.html
+++ b/layouts/partials/home/featured.html
@@ -8,7 +8,7 @@
                 <p>There’s no job we can’t handle. CK Designs is your one-stop-shop for all your remodel and redesign needs.</p>
                 <br>
                 <br>
-                <a href="/contact" class="primary-btn">Contact</a>
+                <a href="/contact-information" class="primary-btn">Contact</a>
             </div>
             <div class="column">
                 <div class="img-container has-text-right">
