--- a/layouts/partials/home/featured.html
+++ b/layouts/partials/home/featured.html
@@ -12,7 +12,7 @@
             </div>
             <div class="column">
                 <div class="img-container has-text-right">
-                    <p class="is-uppercase pb-2">Kitcen Design.</p>
+                    <p class="is-uppercase pb-2">Kitchen Design.</p>
                     <img src="/uploads/dark-kitchen.jpg" alt="">
                     <div class="half-triangle lax" data-lax-preset="eager-250"></div>
                 </div>
