--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -24,8 +24,9 @@
       <div class="columns has-text-left has-text-white is-mobile is-vcentered">
         <div class="column is-half">
           <ul>
-              <li class="is-inline mr-3"><a href="/" class="has-text-white">Houezez.</a></li>
-              <li class="is-inline mr-3"><a href="/" class="has-text-white">Facebook.</a></li>
+              <li class="is-inline mr-3"><a href="https://www.houzz.com/user/ckdesignskandb" target="_blank" class="has-text-white">Houzz.</a></li>
+              <li class="is-inline mr-3"><a href="https://www.facebook.com/ckdesignskandb/" target="_blank" class="has-text-white">Facebook.</a></li>
+              <li class="is-inline mr-3"><a href="https://www.instagram.com/ckdesignskandb/" target="_blank" class="has-text-white">Instagram.</a></li>
           </ul>
         </div>
       </div>
