--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -24,7 +24,7 @@
             <ul>
               {{ if $footerSocial.facebook }}<li class="is-inline mr-2"><a href="{{ $footerSocial.facebook }}" target="_blank" class="has-text-white">Facebook.</a></li>{{ end }}
               {{ if $footerSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $footerSocial.instagram }}" target="_blank" class="has-text-white">Instagram.</a></li>{{ end }}
-              {{ if $footerSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $footerSocial.houzez }}" target="_blank" class="has-text-white">Houzez.</a></li>{{ end }}
+              {{ if $footerSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $footerSocial.houzez }}" target="_blank" class="has-text-white">Houzz.</a></li>{{ end }}
               {{ if $footerSocial.twitter }}<li class="is-inline mr-2"><a href="{{ $footerSocial.twitter }}" target="_blank" class="has-text-white">Twitter.</a></li>{{ end }}
               {{ if $footerSocial.pinterest }}<li class="is-inline mr-2"><a href="{{ $footerSocial.pinterest }}" target="_blank" class="has-text-white">Pinterest.</a></li>{{ end }}
               {{ if $footerSocial.youtube }}<li class="is-inline mr-2"><a href="{{ $footerSocial.youtube }}" target="_blank" class="has-text-white">Youtube.</a></li>{{ end }}
