--- a/layouts/contact-information/contact-information.html
+++ b/layouts/contact-information/contact-information.html
@@ -58,7 +58,7 @@
                         <ul>
                             {{ if $contactSocial.facebook }}<li class="is-inline mr-2"><a href="{{ $contactSocial.facebook }}" target="_blank" class="has-text-black">Facebook.</a></li>{{ end }}
                             {{ if $contactSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $contactSocial.instagram }}" target="_blank" class="has-text-black">Instagram.</a></li>{{ end }}
-                            {{ if $contactSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $contactSocial.houzez }}" target="_blank" class="has-text-black">Houzez.</a></li>{{ end }}
+                            {{ if $contactSocial.instagram }}<li class="is-inline mr-2"><a href="{{ $contactSocial.houzez }}" target="_blank" class="has-text-black">Houzz.</a></li>{{ end }}
                             {{ if $contactSocial.twitter }}<li class="is-inline mr-2"><a href="{{ $contactSocial.twitter }}" target="_blank" class="has-text-black">Twitter.</a></li>{{ end }}
                             {{ if $contactSocial.pinterest }}<li class="is-inline mr-2"><a href="{{ $contactSocial.pinterest }}" target="_blank" class="has-text-black">Pinterest.</a></li>{{ end }}
                             {{ if $contactSocial.youtube }}<li class="is-inline mr-2"><a href="{{ $contactSocial.youtube }}" target="_blank" class="has-text-black">Youtube.</a></li>{{ end }}
