--- a/layouts/flooring/flooring.html
+++ b/layouts/flooring/flooring.html
@@ -23,7 +23,7 @@
         <div class="columns has-text-centered">
             <div class="column">
                 <h2 class="title is-2">Luxury Vinyl</h2>
-                <p>KLuxury Vinyl flooring can emulate the look of wood or stone with a lower initial install cost and superior water resistance. If you’re looking for a low-maintenance option that won’t stress you out or break the bank, Vinyl flooring may be for you!</p>
+                <p>Luxury Vinyl flooring can emulate the look of wood or stone with a lower initial install cost and superior water resistance. If you’re looking for a low-maintenance option that won’t stress you out or break the bank, Vinyl flooring may be for you!</p>
             </div>
         </div>
         <div class="columns has-text-centered pt-6">
