--- a/layouts/partials/global/navbar.html
+++ b/layouts/partials/global/navbar.html
@@ -8,7 +8,7 @@
             {{ if $.IsHome }}
               <img src="{{ .Site.Data.design.logo_and_title.logo | absURL }}" alt="">
               {{ else }}
-              <img src="/uploads/ck-designsblack.png" alt="">
+              <img src="/uploads/blacklogo.png" alt="">
               {{ end }}
             {{ else }}
             <h1 class="title is-3" {{ if $.IsHome }}style="color:#fff;"{{ else }}style="color:#000"{{ end }}>{{ .Site.Data.design.logo_and_title.site_title }}</h1>
