--- a/layouts/partials/home/closing.html
+++ b/layouts/partials/home/closing.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="columns pt-4">
                     <div class="column">
-                        <a href="https://live.vcita.com/site/ylhappdjno0mxiey/action/y21cntkughhrclxk?mode=embed"><strong class="has-text-black">Schedule</strong></a>
+                        <a href="https://live.vcita.com/site/ylhappdjno0mxiey/action/y21cntkughhrclxk?mode=embed" target="_blank"><strong class="has-text-black">Schedule</strong></a>
                     </div>
                 </div>
             </div>
