added blog and seo

--- a/layouts/cabinets/cabinets.html
+++ b/layouts/cabinets/cabinets.html
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="columns is-vcentered pb-6">
             <div class="column">
-                <img src="/uploads/kitchencabinets.jpg" alt="kitchen cabinets with rose gold handles">
+                <img src="/uploads/hardware.jpg" alt="kitchen sink with rose gold faucet">
             </div>
             <div class="column">
                 <h2 class="title is-2">Hardware</h2>
