--- a/layouts/fixtures/fixtures.html
+++ b/layouts/fixtures/fixtures.html
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="columns is-vcentered pb-6">
             <div class="column">
-                <img src="/uploads/kitchen3.jpg" alt="bathroom with gold faucet handle">
+                <img src="/uploads/range.jpg" alt="bathroom with gold faucet handle">
             </div>
             <div class="column">
                 <h2 class="title is-2">Appliances</h2>
