--- a/layouts/partials/home/intro.html
+++ b/layouts/partials/home/intro.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="columns pt-6">
             <div class="column is-half is-offset-one-quarter has-text-centered">
+                <img src="/uploads/blacklogo.png" alt="CK Kitchen & bath Logo" width="300" class="mb-6">
                 <h1 class="title is-1 main-title is-size-3-mobile">Full Service Kitchen & Bath Design & Remodeling by <span>Carly Kalbrunner</span></h1>
                 <div class="line"></div>
                 <p>For complete expert top-to-bottom residential design in the Fayetteville, GA, and surrounding area, call on CK Designs Kitchen & Bath. We’re your locally owned and operated go-to for cabinetry, countertops, hardware, appliances, plumbing fixtures, lighting, tile backsplash, tile floor, tile showers, flooring, and more!</p>
