--- a/layouts/partials/home/featured.html
+++ b/layouts/partials/home/featured.html
@@ -1,7 +1,7 @@
 <div class="big-section">
     <div class="container">
-        <div class="columns is-vcentered">
-            <div class="column is-5">
+        <div class="columns is-vcentered is-variable is-8">
+            <div class="column is-6">
                 <h1 class="title is-2 main-title">Tile Work, Flooring, Kitchens, and <span>Bathrooms</span></h1>
                 <p>From building a new home to remodeling your kitchen or bathroom, CK Designs can do it all. Your home is your sanctuary; it should feel and function exactly how you’d like it to. We hold ourselves to some of the highest standards in the industry, and we’ll always strive to answer every question you may have. We’ll work with you to plan out exactly the solution you need to bring your vision to life!</p>
                 <br>
@@ -12,8 +12,8 @@
             </div>
             <div class="column">
                 <div class="img-container has-text-right">
-                    <p class="is-uppercase pb-2">Kitchen Design.</p>
-                    <img src="/uploads/dark-kitchen.jpg" alt="">
+                    <p class="is-uppercase pb-2">Ck Designs Kitchen & Bath.</p>
+                    <img src="/uploads/range.jpg" alt="Dark modern kitchen cabinets">
                     <div class="half-triangle lax" data-lax-preset="eager-250"></div>
                 </div>
             </div>
