--- a/layouts/contact-information/contact-information.html
+++ b/layouts/contact-information/contact-information.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="big-section">
-    <div class="contact-bg" style="background:url(/uploads/bathtub.jpg) no-repeat center;height: 50vh;margin-bottom:100px;">
+    <div class="contact-bg" style="background:url(/uploads/farmbath.jpg) no-repeat center;height: 50vh;margin-bottom:100px;">
     </div>
     <div class="container is-fluid">
         <div class="columns is-variable is-8">
