--- a/layouts/partials/global/footer.html
+++ b/layouts/partials/global/footer.html
@@ -49,7 +49,7 @@
     </div>
     <div class="columns footer-credit">
       <div class="column has-text-centered-mobile">
-        <small>&copy; Copyright {{ dateFormat "2006" now }}, {{ .Site.Data.profile.company_name }}</small> &middot; <a href="https://hungryram.com" target="_blank">Website Developed by Hungry Ram</a>
+        <small>&copy; Copyright {{ dateFormat "2006" now }}, {{ .Site.Data.profile.company_name }}</small> &middot; <a href="https://hungryram.com" target="_blank" rel="nofollow">Website Developed by Hungry Ram</a>
       </div>
     </div>
   </div>
