--- a/layouts/flooring/flooring.html
+++ b/layouts/flooring/flooring.html
@@ -22,19 +22,19 @@
     <div class="container">
         <div class="columns has-text-centered">
             <div class="column">
-                <h2 class="title is-2">Luxury Vinyl</h2>
+                <h2 class="title is-2">Luxury Vinyl Plank Flooring</h2>
                 <p>Luxury Vinyl flooring can emulate the look of wood or stone with a lower initial install cost and superior water resistance. If you’re looking for a low-maintenance option that won’t stress you out or break the bank, Vinyl flooring may be for you!</p>
             </div>
         </div>
-        <div class="columns has-text-centered pt-6">
+        <!-- <div class="columns has-text-centered pt-6">
             <div class="column">
                 <h2 class="title is-2">Laminate</h2>
                 <p>Enjoy the look and style of hardwood, tile, or stone flooring at a fraction of the cost and with substantially less upkeep and maintenance. Laminate flooring strikes a great balance of form and function. </p>
             </div>
-        </div>
+        </div> -->
         <div class="columns has-text-centered pt-6">
             <div class="column">
-                <h2 class="title is-2">Hardwood</h2>
+                <h2 class="title is-2">Hardwood/Engineered Wood</h2>
                 <p>Hardwood flooring is simply timeless. With a classy look and a warm, comfortable feel, hardwood floors can be a great expression for your home.</p>
             </div>
         </div>
